--- a/base-de-données/TODO.txt
+++ b/base-de-données/TODO.txt
@@ -1,1 +1,4 @@
-- Remplissage de la table vacance (je sais pas si je peux curl une API qui contient les dates des vacances)
+- remplissage de la table boucle = bornes DONE
+- remplissage de la table comptageVeloJour = données de tous les jours DONE
+
+- Remplissage de la table vacances (je sais pas si je peux curl une API qui contient les dates des vacances)
